--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react-toastify": "^9.0.3",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.52.2",
+    "sass-loader": "^13.2.2",
     "slugify": "^1.6.5",
+    "source-map-loader": "^4.0.1",
     "sweetalert2": "^11.4.17",
     "swiper": "^9.2.3",
     "uuid": "^8.3.2",
